# slack-reminder-bot

./: pyproject.toml
.github/workflows/: create_group.yaml  reminder.yaml
build_standup_bot/: create_group_with_area_and_lang.py  create_random_group.py  notify_group.py  reminder.py  utils.py
build_standup_bot/assets/: groups.json  testdata.csv
